<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_view_mode"
        android:title="@string/menu_view_mode"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/action_list"
                android:title="@string/view_list"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_grid"
                android:title="@string/view_grid"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_cardview"
                android:title="@string/view_card"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_about"
        android:title="@string/app_about"
        app:showAsAction="never" />

</menu>