<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AboutAuthor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/about_author" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/gunzo2_font_family"
            android:gravity="center"
            android:text="@string/author_name"
            android:textColor="@color/yellow_bright"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextDesc"
            android:gravity="center"
            android:text="@string/author_email"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="46dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextTitle"
            android:text="@string/disclaimer_label"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:theme="@style/TextDesc"
            android:text="@string/disclaimer"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>