<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_item_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"
            android:theme="@style/TextTitle"
            tools:text="@string/item_name" />

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:theme="@style/TextDesc"
            android:text="@string/item_desc"/>

        <ImageView
            android:id="@+id/img_item_stad_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_stad_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:theme="@style/TextTitle"
            tools:text="@string/stadium_name" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_item_stad_geo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_baseline_location_on_selector" />

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/btn_item_stad_geo"
                android:layout_toRightOf="@id/btn_item_stad_geo"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_stad_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:gravity="center|left"
                    android:text="@string/item_stad_loc"
                    android:textSize="12sp"
                    android:theme="@style/TextDesc" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center|left"
                    android:text="@string/loc_inst"
                    android:textColor="@color/yellow_bright"
                    android:textSize="10sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </TableRow>

        <TextView
            android:id="@+id/tv_item_stad_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:theme="@style/TextDesc"
            android:text="@string/stadium_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/item_sour"
            android:textColor="@color/yellow_bright"
            android:textSize="10sp"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>